[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://asset/music/POL-children-of-shadows-short.wav" type="AudioStream" id=2]
[ext_resource path="res://src/ui/theme.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.152941, 0, 0, 0 ), Color( 0.152344, 0, 0, 0.501961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -48.0, -24.0 ]
}

[node name="DeathScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 1024.0
margin_bottom = 768.0
color = Color( 0.152941, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="Control"]
visible = false
margin_left = 226.0
margin_top = 118.0
margin_right = 320.0
margin_bottom = 144.0
rect_scale = Vector2( 2, 2 )
bbcode_enabled = true
bbcode_text = "[center]You DIED![/center]"
text = "You DIED!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="PopupMenu" parent="Control"]
margin_left = 18.0
margin_top = 10.0
margin_right = 274.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Menu"]
margin_left = 28.0
margin_top = 16.0
margin_right = 228.0
margin_bottom = 66.0
bbcode_enabled = true
bbcode_text = "[center] Continue from the last
save point?[/center]"
text = " Continue from the last
save point?"

[node name="Continue" type="Button" parent="Control/Menu"]
margin_left = 64.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 99.0
disabled = true
text = "Continue"

[node name="Quit" type="Button" parent="Control/Menu"]
margin_left = 64.0
margin_top = 108.0
margin_right = 192.0
margin_bottom = 143.0
text = "Save and Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -48.0
[connection signal="pressed" from="Control/Menu/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Control/Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
